update(falcosidekick): Upgrade to v2.28
Signed-off-by: Lyonel Martinez <lyonel.martinez@numberly.com>

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -11,7 +11,7 @@ image:
   # -- The image repository to pull from
   repository: falcosecurity/falcosidekick
   # -- The image tag to pull
-  tag: 2.27.0
+  tag: 2.28.0
   # -- The image pull policy
   pullPolicy: IfNotPresent
 
@@ -57,10 +57,34 @@ config:
   customfields: ""
   # -- a list of escaped comma separated Go templated fields to add to falco events, syntax is "key:template\,key:template"
   templatedfields: ""
-
-  # -- folder which will used to store client.crt, client.key and ca.crt files for mutual tls (default: "/etc/certs")
+  # -- if not empty, the brackets in keys of Output Fields are replaced
+  bracketreplacer: ""
+  # -- folder which will used to store client.crt, client.key and ca.crt files for mutual tls for outputs, will be deprecated in the future (default: "/etc/certs")
   mutualtlsfilespath: "/etc/certs"
 
+  mutualtlsclient:
+    # -- client certification file for mutual TLS client certification, takes priority over mutualtlsfilespath if not empty
+    certfile: ""
+    # -- client key file for mutual TLS client certification, takes priority over mutualtlsfilespath if not empty
+    keyfile: ""
+    # -- CA certification file for server certification for mutual TLS authentication, takes priority over mutualtlsfilespath if not empty
+    cacertfile: ""
+
+  tlsserver:
+    # -- if true TLS server will be deployed instead of HTTP
+    deploy: false
+    # -- server certification file for TLS Server
+    certfile: "/etc/certs/server/server.crt"
+    # -- server key file for TLS Server
+    keyfile: "/etc/certs/server/server.key"
+    # -- if true mutual TLS server will be deployed instead of TLS, deploy also has to be true
+    mutualtls: false
+    # --  CA certification file for client certification if mutualtls is true
+    cacertfile: "/etc/certs/server/ca.crt"
+    # -- port to serve http server serving selected endpoints
+    notlsport: 2810
+    # -- a comma separated list of endpoints, if not empty, a separate http server will be deployed for the specified endpoints
+    notlspaths: ""
 
   slack:
     # -- Slack Webhook URL (ex: <https://hooks.slack.com/services/XXXX/YYYY/ZZZZ>), if not `empty`, Slack output is *enabled*
@@ -149,6 +173,12 @@ config:
     extralabels: ""
     # -- comma separated list of annotations composed of a ':' separated name and value that is added to the Alerts. Example: my_annotation_1:my_value_1, my_annotation_1:my_value_2
     extraannotations: ""
+    # -- comma separated list of tuple composed of a ':' separated Falco priority and Alertmanager severity that is used to override the severity label associated to the priority level of falco event. Example: debug:value_1,critical:value2. Default mapping: emergency:critical,alert:critical,critical:critical,error:warning,warning:warning,notice:information,informational:information,debug:information.
+    customseveritymap: ""
+    # -- default priority of dropped events, values are emergency|alert|critical|error|warning|notice|informational|debug
+    dropeventdefaultpriority: "critical"
+    # -- comma separated list of priority re-evaluation thresholds of dropped events composed of a ':' separated integer threshold and string priority. Example: `10000:critical, 100:warning, 1:informational`
+    dropeventthresholds: "10000:critical, 1000:critical, 100:critical, 10:warning, 1:warning"
     # -- if true, checkcert flag will be ignored (server cert will always be checked)
     mutualtls: false
     # -- check if ssl certificate of the output is valid
@@ -167,6 +197,8 @@ config:
     username: ""
     # -- use this password to authenticate to Elasticsearch if the password is not empty
     password: ""
+    # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+    customheaders: ""
     # -- if true, checkcert flag will be ignored (server cert will always be checked)
     mutualtls: false
     # -- check if ssl certificate of the output is valid
@@ -209,6 +241,8 @@ config:
     tenant: ""
     # -- comma separated list of fields to use as labels additionally to rule, source, priority, tags and custom_fields
     extralabels: ""
+    # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+    customheaders: ""
     # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
     minimumpriority: ""
     # -- if true, checkcert flag will be ignored (server cert will always be checked)
@@ -247,6 +281,8 @@ config:
   aws:
     # -- AWS IAM role ARN for falcosidekick service account to associate with (optionnal if you use EC2 Instance Profile)
     rolearn: ""
+    # -- External id for the role to assume (optional if you use EC2 Instance Profile)
+    externalid: ""
     # -- AWS Access Key Id (optionnal if you use EC2 Instance Profile)
     accesskeyid: ""
     # -- AWS Secret Access Key (optionnal if you use EC2 Instance Profile)
@@ -310,6 +346,8 @@ config:
   smtp:
     # -- "host:port" address of SMTP server, if not empty, SMTP output is *enabled*
     hostport: ""
+    # -- use TLS connection (true/false)
+    tls: true
     # -- SASL Mechanisms : plain, oauthbearer, external, anonymous or "" (disable SASL)
     authmechanism: "plain"
     # -- user to access SMTP server
@@ -360,6 +398,8 @@ config:
   webhook:
     # -- Webhook address, if not empty, Webhook output is *enabled*
     address: ""
+    # -- HTTP method: POST or PUT
+    method: "POST"
     # -- a list of comma separated custom headers to add, syntax is "key:value\,key:value"
     customHeaders: ""
     # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
@@ -402,6 +442,8 @@ config:
       projectid: ""
       # -- Name of the Pub/Sub topic
       topic: ""
+      # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+      customattributes: ""
       # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
       minimumpriority: ""
     storage:
@@ -435,12 +477,14 @@ config:
     messageformat: ""
 
   kafka:
-    # -- The Host:Port of the Kafka (ex: kafka:9092). if not empty, Kafka output is *enabled*
+    # -- comma separated list of Apache Kafka bootstrap nodes for establishing the initial connection to the cluster (ex: localhost:9092,localhost:9093). Defaults to port 9092 if no port is specified after the domain, if not empty, Kafka output is *enabled*
     hostport: ""
     # -- Name of the topic, if not empty, Kafka output is enabled
     topic: ""
     # -- SASL authentication mechanism, if empty, no authentication (PLAIN|SCRAM_SHA256|SCRAM_SHA512)
     sasl: ""
+    # -- Use TLS for the connections
+    tls: false
     # -- use this username to authenticate to Kafka via SASL
     username: ""
     # -- use this password to authenticate to Kafka via SASL
@@ -453,6 +497,8 @@ config:
     compression: "NONE"
     # -- partition balancing strategy when producing
     balancer: "round_robin"
+    # -- auto create the topic if it doesn't exist
+    topiccreation: false
     # -- specify a client.id when communicating with the broker for tracing
     clientid: ""
     # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
@@ -461,6 +507,8 @@ config:
   pagerduty:
     # -- Pagerduty Routing Key, if not empty, Pagerduty output is *enabled*
     routingkey: ""
+    # -- Pagerduty Region, can be 'us' or 'eu'
+    region: "us"
     # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
     minimumpriority: ""
 
@@ -541,12 +589,27 @@ config:
     panelid: ""
     # -- if true, all custom fields are added as tags (default: false)
     allfieldsastags: false
+    # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+    customheaders: ""
     # -- if true, checkcert flag will be ignored (server cert will always be checked)
     mutualtls: false
     # -- check if ssl certificate of the output is valid
     checkcert: true
     # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
     minimumpriority: ""
+
+  grafanaoncall:
+    # -- if not empty, Grafana OnCall output is enabled
+    webhookurl: ""
+    # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+    customheaders: ""
+    # -- if true, checkcert flag will be ignored (server cert will always be checked)
+    mutualtls: false
+    # -- check if ssl certificate of the output is valid
+    checkcert: true
+    # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
+    minimumpriority: ""
+
   fission:
     # -- Name of Fission function, if not empty, Fission is enabled
     function: ""
@@ -732,6 +795,66 @@ config:
     hypertablename: "falco_events"
     # -- minimum priority of event to use this output, order is `emergency\|alert\|critical\|error\|warning\|notice\|informational\|debug or ""`
     minimumpriority: ""
+
+  redis:
+    # -- Redis address, if not empty, Redis output is enabled
+    address: ""
+    # -- Password to authenticate with Redis
+    password: ""
+    # -- Redis database number
+    database: 0
+    # -- Redis storage type: hashmap or list
+    storagetype: "list"
+    # -- Redis storage key name for hashmap, list
+    key: "falco"
+    # -- minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or ""
+    minimumpriority: ""
+
+  telegram:
+    # -- telegram bot authentication token
+    token: ""
+    # -- telegram Identifier of the shared chat
+    chatid: ""
+    # -- check if ssl certificate of the output is valid
+    checkcert: true
+    # -- minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or ""
+    minimumpriority: ""
+
+  n8n:
+    # -- N8N address, if not empty, N8N output is enabled
+    address: ""
+    # -- Username to authenticate with N8N in basic auth
+    user: ""
+    # -- Password to authenticate with N8N in basic auth
+    password: ""
+    # -- Header Auth Key to authenticate with N8N
+    headerauthname: ""
+    # -- Header Auth Value to authenticate with N8N
+    headerauthvalue: ""
+    # -- check if ssl certificate of the output is valid
+    checkcert: true
+    # -- minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or ""
+    minimumpriority: ""
+
+  openobserve:
+    # -- http://{domain or ip}:{port}, if not empty, OpenObserve output is enabled
+    hostport: ""
+    # -- Organization name
+    organizationname: "default"
+    # -- Stream name
+    streamname: "falco"
+    # -- minimum priority of event for using this output, order is emergency|alert|critical|error|warning|notice|informational|debug or ""
+    minimumpriority: ""
+    # -- if true, checkcert flag will be ignored (server cert will always be checked)
+    mutualtls: false
+    # -- check if ssl certificate of the output is valid
+    checkcert: true
+    # -- use this username to authenticate to OpenObserve if the username is not empty
+    username: ""
+    # -- use this password to authenticate to OpenObserve if the password is not empty
+    password: ""
+    # -- a list of comma separated custom headers to add, syntax is "key:value,key:value"
+    customheaders: ""
 
 service:
   # -- Service type
