--- a/falcosidekick/templates/deployment.yaml
+++ b/falcosidekick/templates/deployment.yaml
@@ -84,8 +84,31 @@ spec:
               value: {{ .Values.config.customfields | quote }}
             - name: TEMPLATEDFIELDS
               value: {{ .Values.config.templatedfields | quote }}
+            - name: BRACKETREPLACER
+              value: {{ .Values.config.bracketreplacer | quote }}
             - name: MUTUALTLSFILESPATH
               value: {{ .Values.config.mutualtlsfilespath | quote }}
+            - name: MUTUALTLSCLIENT_CERTFILE
+              value: {{ .Values.config.mutualtlsclient.certfile | quote }}
+            - name: MUTUALTLSCLIENT_KEYFILE
+              value: {{ .Values.config.mutualtlsclient.keyfile | quote }}
+            - name: MUTUALTLSCLIENT_CACERTFILE
+              value: {{ .Values.config.mutualtlsclient.cacertfile | quote }}
+            - name: TLSSERVER_DEPLOY
+              value: {{ .Values.config.tlsserver.deploy | quote }}
+            - name: TLSSERVER_CERTFILE
+              value: {{ .Values.config.tlsserver.certfile | quote }}
+            - name: TLSSERVER_KEYFILE
+              value: {{ .Values.config.tlsserver.keyfile | quote }}
+            - name: TLSSERVER_CACERTFILE
+              value: {{ .Values.config.tlsserver.cacertfile | quote }}
+            - name: TLSSERVER_MUTUALTLS
+              value: {{ .Values.config.tlsserver.mutualtls | quote }}
+            - name: TLSSERVER_NOTLSPORT
+              value: {{ .Values.config.tlsserver.notlsport | quote }}
+            - name: TLSSERVER_NOTLSPATHS
+              value: {{ .Values.config.tlsserver.notlspaths | quote }}
+
             {{- if .Values.config.extraEnv }}
             {{ toYaml .Values.config.extraEnv | nindent 12 }}
             {{- end }}
