--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -65,6 +65,9 @@ data:
   {{- if .Values.config.alertmanager.extraannotations }}
   ALERTMANAGER_EXTRAANNOTATIONS: "{{ .Values.config.alertmanager.extraannotations | b64enc }}"
   {{- end }}
+  ALERTMANAGER_CUSTOMSEVERITYMAP: "{{ .Values.config.alertmanager.customseveritymap | b64enc }}"
+  ALERTMANAGER_DROPEVENTDEFAULTPRIORITY: "{{ .Values.config.alertmanager.dropeventdefaultpriority | b64enc }}"
+  ALERTMANAGER_DROPEVENTTHRESHOLDS: "{{ .Values.config.alertmanager.dropeventthresholds | b64enc }}"
   ALERTMANAGER_MINIMUMPRIORITY: "{{ .Values.config.alertmanager.minimumpriority | b64enc }}"
   ALERTMANAGER_MUTUALTLS: "{{ .Values.config.alertmanager.mutualtls | printf "%t" | b64enc }}"
   ALERTMANAGER_CHECKCERT: "{{ .Values.config.alertmanager.checkcert | printf "%t" | b64enc }}"
@@ -83,6 +86,8 @@ data:
 
   # AWS Output
   AWS_ACCESSKEYID: "{{ .Values.config.aws.accesskeyid | b64enc }}"
+  AWS_ROLEARN: "{{ .Values.config.aws.rolearn | b64enc }}"
+  AWS_EXTERNALID: "{{ .Values.config.aws.externalid | b64enc }}"
   AWS_SECRETACCESSKEY: "{{ .Values.config.aws.secretaccesskey | b64enc }}"
   AWS_REGION: "{{ .Values.config.aws.region | b64enc }}"
   AWS_CHECKIDENTITY: "{{ .Values.config.aws.checkidentity | printf "%t" | b64enc }}"
@@ -113,6 +118,7 @@ data:
   SMTP_USER: "{{ .Values.config.smtp.user | b64enc }}"
   SMTP_PASSWORD: "{{ .Values.config.smtp.password | b64enc }}"
   SMTP_AUTHMECHANISM: "{{ .Values.config.smtp.authmechanism | b64enc }}"
+  SMTP_TLS: "{{ .Values.config.smtp.tls | printf "%t" | b64enc }}"
   SMTP_HOSTPORT: "{{ .Values.config.smtp.hostport | b64enc }}"
   SMTP_FROM: "{{ .Values.config.smtp.from | b64enc }}"
   SMTP_TO: "{{ .Values.config.smtp.to | b64enc }}"
@@ -138,6 +144,7 @@ data:
   GCP_CREDENTIALS: "{{ .Values.config.gcp.credentials | b64enc }}"
   GCP_PUBSUB_PROJECTID: "{{ .Values.config.gcp.pubsub.projectid | b64enc }}"
   GCP_PUBSUB_TOPIC: "{{ .Values.config.gcp.pubsub.topic | b64enc }}"
+  GCP_PUBSUB_CUSTOMATTRIBUTES: "{{ .Values.config.gcp.pubsub.customattributes | b64enc }}"
   GCP_PUBSUB_MINIMUMPRIORITY: "{{ .Values.config.gcp.pubsub.minimumpriority | b64enc }}"
   GCP_STORAGE_BUCKET: "{{ .Values.config.gcp.storage.bucket | b64enc }}"
   GCP_STORAGE_PREFIX: "{{ .Values.config.gcp.storage.prefix | b64enc }}"
@@ -164,6 +171,7 @@ data:
   ELASTICSEARCH_CHECKCERT: "{{ .Values.config.elasticsearch.checkcert | printf "%t" | b64enc }}"
   ELASTICSEARCH_USERNAME: "{{ .Values.config.elasticsearch.username | b64enc }}"
   ELASTICSEARCH_PASSWORD: "{{ .Values.config.elasticsearch.password | b64enc }}"
+  ELASTICSEARCH_CUSTOMHEADERS: "{{ .Values.config.elasticsearch.customheaders | b64enc }}"
 
   # Loki Output
   LOKI_HOSTPORT: "{{ .Values.config.loki.hostport | b64enc }}"
@@ -172,6 +180,7 @@ data:
   LOKI_APIKEY: "{{ .Values.config.loki.apikey | b64enc }}"
   LOKI_TENANT: "{{ .Values.config.loki.tenant | b64enc }}"
   LOKI_EXTRALABELS: "{{ .Values.config.loki.extralabels | b64enc }}"
+  LOKI_CUSTOMHEADERS: "{{ .Values.config.loki.customheaders | b64enc }}"
   LOKI_MINIMUMPRIORITY: "{{ .Values.config.loki.minimumpriority | b64enc }}"
   LOKI_MUTUALTLS: "{{ .Values.config.loki.mutualtls | printf "%t" | b64enc }}"
   LOKI_CHECKCERT: "{{ .Values.config.loki.checkcert | printf "%t" | b64enc }}"
@@ -204,6 +213,7 @@ data:
 
   # WebHook Output
   WEBHOOK_ADDRESS: "{{ .Values.config.webhook.address | b64enc }}"
+  WEBHOOK_METHOD: "{{ .Values.config.webhook.method | b64enc }}"
   WEBHOOK_CUSTOMHEADERS: "{{ .Values.config.webhook.customHeaders | b64enc }}"
   WEBHOOK_MINIMUMPRIORITY: "{{ .Values.config.webhook.minimumpriority | b64enc }}"
   WEBHOOK_MUTUALTLS: "{{ .Values.config.webhook.mutualtls | printf "%t" | b64enc }}"
@@ -218,17 +228,20 @@ data:
   KAFKA_HOSTPORT: "{{ .Values.config.kafka.hostport | b64enc }}"
   KAFKA_TOPIC: "{{ .Values.config.kafka.topic | b64enc }}"
   KAFKA_SASL: "{{ .Values.config.kafka.sasl | b64enc }}"
+  KAFKA_TLS: "{{ .Values.config.kafka.tls | printf "%t" |b64enc }}"
   KAFKA_USERNAME: "{{ .Values.config.kafka.username | b64enc }}"
   KAFKA_PASSWORD: "{{ .Values.config.kafka.password | b64enc }}"
   KAFKA_ASYNC: "{{ .Values.config.kafka.async | printf "%t" | b64enc }}"
   KAFKA_REQUIREDACKS: "{{ .Values.config.kafka.requiredacks | b64enc }}"
   KAFKA_COMPRESSION: "{{ .Values.config.kafka.compression | b64enc }}"
   KAFKA_BALANCER: "{{ .Values.config.kafka.balancer | b64enc }}"
+  KAFKA_TOPICCREATION: "{{ .Values.config.kafka.topiccreation | printf "%t" | b64enc }}"
   KAFKA_CLIENTID: "{{ .Values.config.kafka.clientid | b64enc }}"
   KAFKA_MINIMUMPRIORITY: "{{ .Values.config.kafka.minimumpriority | b64enc }}"
 
   # PagerDuty Output
   PAGERDUTY_ROUTINGKEY: "{{ .Values.config.pagerduty.routingkey | b64enc }}"
+  PAGERDUTY_REGION: "{{ .Values.config.pagerduty.region | b64enc }}"
   PAGERDUTY_MINIMUMPRIORITY: "{{ .Values.config.pagerduty.minimumpriority | b64enc }}"
 
   # Kubeless Output
@@ -275,9 +288,17 @@ data:
   GRAFANA_DASHBOARDID: "{{ .Values.config.grafana.dashboardid | toString | b64enc}}"
   GRAFANA_PANELID: "{{ .Values.config.grafana.panelid | toString | b64enc}}"
   GRAFANA_ALLFIELDSASTAGS: "{{ .Values.config.grafana.allfieldsastags | printf "%t" | b64enc}}"
+  GRAFANA_CUSTOMHEADERS: "{{ .Values.config.grafana.customheaders | b64enc}}"
   GRAFANA_MUTUALTLS: "{{ .Values.config.grafana.mutualtls | printf "%t" | b64enc}}"
   GRAFANA_CHECKCERT: "{{ .Values.config.grafana.checkcert | printf "%t" | b64enc}}"
   GRAFANA_MINIMUMPRIORITY: "{{ .Values.config.grafana.minimumpriority | b64enc}}"
+
+  # Grafana On Call Output
+  GRAFANAONCALL_WEBHOOKURL: "{{ .Values.config.grafanaoncall.webhookurl | b64enc}}"
+  GRAFANAONCALL_CUSTOMHEADERS: "{{ .Values.config.grafanaoncall.customheaders | b64enc}}"
+  GRAFANAONCALL_CHECKCERT: "{{ .Values.config.grafanaoncall.checkcert | printf "%t" | b64enc}}"
+  GRAFANAONCALL_MUTUALTLS: "{{ .Values.config.grafanaoncall.mutualtls | printf "%t" | b64enc}}"
+  GRAFANAONCALL_MINIMUMPRIORITY: "{{ .Values.config.grafanaoncall.minimumpriority | b64enc}}"
 
   # Fission Output
   FISSION_FUNCTION: "{{ .Values.config.fission.function | b64enc}}"
@@ -383,6 +404,38 @@ data:
   TIMESCALEDB_DATABASE: "{{ .Values.config.timescaledb.database | b64enc}}"
   TIMESCALEDB_HYPERTABLENAME: "{{ .Values.config.timescaledb.hypertablename | b64enc}}"
   TIMESCALEDB_MINIMUMPRIORITY : "{{ .Values.config.timescaledb.minimumpriority | b64enc}}"
+
+  # Redis Output
+  REDIS_ADDRESS: "{{ .Values.config.redis.address | b64enc}}"
+  REDIS_PASSWORD: "{{ .Values.config.redis.password | b64enc}}"
+  REDIS_DATABASE: "{{ .Values.config.redis.database | toString | b64enc}}"
+  REDIS_KEY: "{{ .Values.config.redis.key | b64enc}}"
+  REDIS_STORAGETYPE: "{{ .Values.config.redis.storagetype | b64enc}}"
+  REDIS_MINIMUMPRIORITY : "{{ .Values.config.redis.minimumpriority | b64enc}}"
+
+  # TELEGRAM Output
+  TELEGRAM_TOKEN: "{{ .Values.config.telegram.token | b64enc}}"
+  TELEGRAM_CHATID: "{{ .Values.config.telegram.chatid | b64enc}}"
+  TELEGRAM_MINIMUMPRIORITY : "{{ .Values.config.telegram.minimumpriority | b64enc}}"
+  TELEGRAM_CHECKCERT : "{{ .Values.config.telegram.checkcert | printf "%t" | b64enc}}"
+
+  # N8N Output
+  N8N_ADDRESS: "{{ .Values.config.n8n.address | b64enc}}"
+  N8N_USER: "{{ .Values.config.n8n.user | b64enc}}"
+  N8N_PASSWORD: "{{ .Values.config.n8n.password | b64enc}}"
+  N8N_MINIMUMPRIORITY : "{{ .Values.config.n8n.minimumpriority | b64enc}}"
+  N8N_CHECKCERT : "{{ .Values.config.n8n.checkcert | printf "%t" | b64enc}}"
+
+  # Open Observe Output
+  OPENOBSERVE_HOSTPORT: "{{ .Values.config.openobserve.hostport | b64enc}}"
+  OPENOBSERVE_USERNAME: "{{ .Values.config.openobserve.username | b64enc}}"
+  OPENOBSERVE_PASSWORD: "{{ .Values.config.openobserve.password | b64enc}}"
+  OPENOBSERVE_CHECKCERT : "{{ .Values.config.openobserve.checkcert | printf "%t" | b64enc}}"
+  OPENOBSERVE_MUTUALTLS : "{{ .Values.config.openobserve.mutualtls | printf "%t" | b64enc}}"
+  OPENOBSERVE_CUSTOMHEADERS : "{{ .Values.config.openobserve.customheaders | b64enc}}"
+  OPENOBSERVE_ORGANIZATIONNAME: "{{ .Values.config.openobserve.organizationname | b64enc}}"
+  OPENOBSERVE_STREAMNAME: "{{ .Values.config.openobserve.streamname | b64enc}}"
+  OPENOBSERVE_MINIMUMPRIORITY : "{{ .Values.config.openobserve.minimumpriority | b64enc}}"
 
   # WebUI Output
   {{- if .Values.webui.enabled -}}
