fix wrong key used for the user secret
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/falcosidekick/templates/secrets-ui.yaml
+++ b/falcosidekick/templates/secrets-ui.yaml
@@ -13,7 +13,7 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.webui.user }}
-  USER: "{{ .Values.webui.user | b64enc}}"
+  FALCOSIDEKICK_UI_USER: "{{ .Values.webui.user | b64enc}}"
   {{-  end }}
   {{- if .Values.webui.redis.password }}
   FALCOSIDEKICK_UI_REDIS_PASSWORD: "{{ .Values.webui.redis.password | b64enc}}"
