* add aws.config.useirsa to fix the behavior with AWS IRSA * add service_monitor + prometheus_rules * fix error with alertmanager custom map and threshold
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/charts/falcosidekick/templates/secrets.yaml
+++ b/charts/falcosidekick/templates/secrets.yaml
@@ -65,9 +65,15 @@ data:
   {{- if .Values.config.alertmanager.extraannotations }}
   ALERTMANAGER_EXTRAANNOTATIONS: "{{ .Values.config.alertmanager.extraannotations | b64enc }}"
   {{- end }}
+  {{- if .Values.config.alertmanager.customseveritymap }}
   ALERTMANAGER_CUSTOMSEVERITYMAP: "{{ .Values.config.alertmanager.customseveritymap | b64enc }}"
+  {{- end }}
+  {{- if .Values.config.alertmanager.dropeventdefaultpriority }}
   ALERTMANAGER_DROPEVENTDEFAULTPRIORITY: "{{ .Values.config.alertmanager.dropeventdefaultpriority | b64enc }}"
+  {{- end }}
+  {{- if .Values.config.alertmanager.dropeventthresholds }}
   ALERTMANAGER_DROPEVENTTHRESHOLDS: "{{ .Values.config.alertmanager.dropeventthresholds | b64enc }}"
+  {{- end }}
   ALERTMANAGER_MINIMUMPRIORITY: "{{ .Values.config.alertmanager.minimumpriority | b64enc }}"
   ALERTMANAGER_MUTUALTLS: "{{ .Values.config.alertmanager.mutualtls | printf "%t" | b64enc }}"
   ALERTMANAGER_CHECKCERT: "{{ .Values.config.alertmanager.checkcert | printf "%t" | b64enc }}"
@@ -86,8 +92,10 @@ data:
 
   # AWS Output
   AWS_ACCESSKEYID: "{{ .Values.config.aws.accesskeyid | b64enc }}"
+  {{- if not .Values.config.aws.useirsa }}
   AWS_ROLEARN: "{{ .Values.config.aws.rolearn | b64enc }}"
   AWS_EXTERNALID: "{{ .Values.config.aws.externalid | b64enc }}"
+  {{- end }}
   AWS_SECRETACCESSKEY: "{{ .Values.config.aws.secretaccesskey | b64enc }}"
   AWS_REGION: "{{ .Values.config.aws.region | b64enc }}"
   AWS_CHECKIDENTITY: "{{ .Values.config.aws.checkidentity | printf "%t" | b64enc }}"
