--- a/charts/falcosidekick/templates/service.yaml
+++ b/charts/falcosidekick/templates/service.yaml
@@ -11,6 +11,7 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
   {{- with .Values.service.annotations }}
   annotations:
+    prometheus.io/scrape: "true"
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
