add aws.config.useirsa to fix the behavior with AWS IRSA
Signed-off-by: Thomas Labarussias <issif+github@gadz.org>

--- a/falcosidekick/templates/secrets.yaml
+++ b/falcosidekick/templates/secrets.yaml
@@ -86,8 +86,10 @@ data:
 
   # AWS Output
   AWS_ACCESSKEYID: "{{ .Values.config.aws.accesskeyid | b64enc }}"
+  {{- if not .Values.config.aws.useirsa }}
   AWS_ROLEARN: "{{ .Values.config.aws.rolearn | b64enc }}"
   AWS_EXTERNALID: "{{ .Values.config.aws.externalid | b64enc }}"
+  {{- end }}
   AWS_SECRETACCESSKEY: "{{ .Values.config.aws.secretaccesskey | b64enc }}"
   AWS_REGION: "{{ .Values.config.aws.region | b64enc }}"
   AWS_CHECKIDENTITY: "{{ .Values.config.aws.checkidentity | printf "%t" | b64enc }}"
