Revert "Added values to README"
This reverts commit 3e7ceb49b4a1ac0ca0f84f6575d28db6cba85bc2.

--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -930,12 +930,12 @@ certs:
   # -- Existing secret containing the following key, crt and ca as well as the bundle pem.
   existingSecret: ""
   server:
-    # -- Key used by mTLS webserver.
+    # -- Key used by gRPC and webserver.
     key: ""
-    # -- Certificate used by mTLS webserver.
+    # -- Certificate used by gRPC and webserver.
     crt: ""
   ca:
-    # -- CA certificate used by server Client Certificate validation.
+    # -- CA certificate used by gRPC, webserver and AuditSink validation.
     crt: ""
 
 testConnection:
