--- a/falcosidekick/templates/certs-secret.yaml
+++ b/falcosidekick/templates/certs-secret.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.certs.server.key .Values.certs.server.crt .Values.certs.ca.crt }}
+{{- if and .Values.config.tlsserver.serverkey .Values.config.tlsserver.servercrt .Values.config.tlsserver.cacrt }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -11,11 +11,11 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 data:
-  {{ $key := .Values.certs.server.key }}
+  {{ $key := .Values.config.tlsserver.serverkey }}
   server.key: {{ $key | b64enc | quote }}
-  {{ $crt := .Values.certs.server.crt }}
+  {{ $crt := .Values.config.tlsserver.servercrt }}
   server.crt: {{ $crt | b64enc | quote }}
   falcosidekick.pem: {{ print $key $crt | b64enc | quote }}
-  ca.crt: {{ .Values.certs.ca.crt | b64enc | quote }}
-  ca.pem: {{ .Values.certs.ca.crt | b64enc | quote }}
+  ca.crt: {{ .Values.config.tlsserver.cacrt | b64enc | quote }}
+  ca.pem: {{ .Values.config.tlsserver.cacrt | b64enc | quote }}
 {{- end }}
