feat(falcosidekick): support extra args in the chart
Signed-off-by: Cyprien Oger <cyprien.oger@opendatasoft.com>

--- a/charts/falcosidekick/templates/deployment.yaml
+++ b/charts/falcosidekick/templates/deployment.yaml
@@ -86,6 +86,10 @@ spec:
           securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
           {{- end }}
+          {{- if .Values.config.extraArgs }}
+          args:
+          {{ toYaml .Values.config.extraArgs | nindent 12 }}
+          {{- end }}
           envFrom:
             - secretRef:
                 {{- if .Values.config.existingSecret }}
